--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
+
 <head>
 	<meta charset="UTF-8">
-	<link rel="icon" type="image/png" href="/logo.png">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+	<meta content="yes" name="apple-mobile-web-app-capable" />
 	<link rel="apple-touch-icon" href="/favicon.ico">
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
-	<title>智搜</title>
+	<title>ChatGPT Web</title>
+	<meta name="description" content="chatgpt" />
+	<meta name="keywords" content="chatgpt, aigc, 智能, chat, gpt, bot, robot" />
+	<style>
+		.pd-point {
+			visibility: hidden;
+			position: fixed;
+		}
+	</style>
 </head>
 
 <body class="dark:bg-black">
@@ -71,12 +80,25 @@
 		</style>
 		<div class="loading-wrap">
 			<div class="balls">
+				<h1 class="pd-point">ChatGPT</h1>
+				<h1 class="pd-point">GPT</h1>
+				<h1 class="pd-point">Chat</h1>
+				<h1 class="pd-point">ROBOT</h1>
+				<h1 class="pd-point">机器人</h1>
+				<h1 class="pd-point">智能</h1>
 				<div></div>
 				<div></div>
 				<div></div>
 			</div>
 		</div>
 	</div>
+	<h1 class="pd-point">ChatGPT</h1>
+	<h1 class="pd-point">GPT</h1>
+	<h1 class="pd-point">Chat</h1>
+	<h1 class="pd-point">ROBOT</h1>
+	<h1 class="pd-point">机器人</h1>
+	<h1 class="pd-point">智能</h1>
+	<article class="pd-point">ChatGPT, GPT, Chat, ROBOT, 机器人, 智能</article>
 	<script type="module" src="/src/main.ts"></script>
 </body>
 
